manifests/03_08/virtualservice-reviews-timeout.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: reviews-timout
spec:
  hosts:
  - reviews
  http:
  - route:
    - destination:
        host: reviews
        subset: v2
    timeout: 0.5s
